# jarvis-ai

./: .env  README.md  main.py  pyproject.toml  rag_test.py
brain/: llm.py
calculator/: parser.py
config/: settings.py
control/: control_layer.py
execution/: context.py  context_dependency.py
executor/: executor.py
interface/: cli.py
planner/: arg_extractor.py  completeness.py  control.py  dependency_resolver.py  entity_extractor.py  intelligence.py  intent.py  llm_enhancer.py  optimizer.py  plan_variants.py  planner.py  schema.py  scorer.py  task.py  task_builder.py  tool_prompt.py  tool_selector.py  validator.py
rag/: embedder.py  ingestor.py  loader.py  qa.py  retriever.py  store.py
rag/loaders/: md_loader.py  pdf_loader.py  text_loader.py
retriever/: text_extractor.py  web_fetcher.py
tests/: test_executor.py  test_planner.py
tools/: base.py  basic_tools.py  calculator_tool.py  explain_tool.py  load_doc_tool.py  rag_tool.py  registry.py  semantic_matcher.py  web_retriever_tool.py  web_search_tool.py
